public enum timePeriods {
  DAILY,MONTHLY, YEARLY,ALL
}
